<resources>
    <string name="app_name">ViewModel</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_home">Contacts</string>
    <string name="title_dashboard">Rooms</string>

</resources>
