...
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:drawableLeft="@drawable/ic_cellphone"
                android:elevation="4dp"
                android:drawablePadding="5dp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/emailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:drawablePadding="5dp"
...
